<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marktscanner Version 10</string>
    
    <!-- Buttons -->
    <string name="btn_takePicture">Mache Foto</string>
    <string name="btn_scanobj">Scan</string>
    <string name="btn_speichern">Speichern</string>
    <string name="btn_neuerHaendler">Neu</string>
    <string name="btn_zurueck">Zurück</string>
    <string name="btn_loeschen">Löschen</string>
    
    <!-- Labels -->
    <string name="tx_nicht_gescaned">*** Barcode ***</string>
    <string name="tx_name">Artikelname:</string>
    <string name="tx_barcode">Barcode:</string>
    <string name="tx_preis">Preis:</string>
    <string name="tx_haendler">Händler:</string>
    
    <!-- Texte -->
    <string name="tx_daten_gespeichert">Die Daten wurden gespeichert.</string>
    <string name="tx_barcode_nicht_eindeutig">Der Barcode ist in der Datenbank nicht eindeutig.</string>
    <string name="tx_code_gefunden">Der Barcode wurde in der Datenbank gefunden.</string>
    <string name="tx_code_neu">Der Barcode ist neu.</string>
    <string name="tx_haendler_existiert">Der Händler existiert bereits.</string>
    <string name="tx_haendler_geloescht">Der Händler wurde gelöscht.</string>
    <string name="tx_haendler_nichtGeloescht">Der Händler konnte nicht gelöscht werden.</string>
    <string name="tx_haendler_nicht_eindeutig">Der Händler ist nicht eindeutig.</string>
    <string name="tx_haendler_nicht_ausgewaehlt">Es ist kein Händler ausgewählt. Wo wurde das Produkt gekauft?</string>
    <string name="tx_kein_preis">Es wurde kein Preis angegeben. Wie teuer ist das Produkt?</string>
    <string name="tx_preis_nicht_gueltig">Der Preis hat keinen gültigen Wert. Format=XXXXX.XX</string>
    
    <!-- Image Views -->
    <item name="iv_produktBild" type="id"></item>
</resources>
