<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" android:scrollbars="vertical"
		android:isScrollContainer="true">
		<TextView 
			android:text="@string/tx_barcode"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_margin="5dp">
		</TextView>
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:orientation="horizontal">
			<EditText 
				android:id="@+id/tv_scanresult"
				android:text="@string/tx_nicht_gescaned"
				android:editable="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp">
			</EditText>
			<Button
				android:id="@+id/btn_scanobj"
				android:text="@string/btn_scanobj"
				android:onClick="scanobj" 
				android:layout_width="65dp"
				android:layout_height="fill_parent"
				android:layout_margin="5dp"
				android:layout_weight="1">
			</Button>
		</LinearLayout>
		<TextView
			android:text="@string/tx_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp">
		</TextView>
		<EditText 
			android:id="@+id/tv_name"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_margin="5dp">
		</EditText>
		<TextView
			android:text="@string/tx_preis"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp">
		</TextView>
		<EditText
			android:id="@+id/tv_preis"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_margin="5dp">
		</EditText>
		<TextView
			android:text="@string/tx_haendler"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp">
		</TextView>
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:orientation="horizontal">
			<Spinner
				android:id="@+id/tv_haendler"
				android:enabled="true"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_margin="5dp">
			</Spinner>
			<Button
				android:id="@+id/btn_neuerHaendler"
				android:text="@string/btn_neuerHaendler"
				android:onClick="neuerHaendler" 
				android:layout_width="65dp"
				android:layout_height="fill_parent"
				android:layout_margin="5dp"
				android:layout_weight="1">
			</Button>
		</LinearLayout>
		<Button
			android:id="@+id/btn_speichern"
			android:text="@string/btn_speichern"
			android:onClick="speichern" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_margin="5dp">
		</Button>
		<!-- <Button android:text="@string/btn_takePicture" android:id="@+id/btn_takePicture"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_margin="10dp" android:onClick="takePicture">
		</Button>
		<ImageView android:id="@id/iv_produktBild"
			android:layout_width="fill_parent" android:layout_height="100dp"
			android:layout_margin="10dp">
		</ImageView>
	 -->
	</LinearLayout>
</ScrollView>